infra/k8s/runner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-manager
  namespace: runner
spec:
  selector:
    app: pod-manager
  ports:
    - port: 80
      targetPort: 8080
