infra/k8s/runner/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: runner-httproute
  namespace: runner
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-wildcard
  hostnames:
    - run.codedang.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /run
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: pod-manager-traefik-service
          port: 80
